--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
             <span class="blur"></span>
             <span class="blur"></span>
             <h4>LEARN NEW LANGUAGES AND BECOME PRO</h4>
-            <H1>Welcome to <span>SevenCode</span>, new Programmer</H1>
+            <div class="content">
+                <H1>Welcome to <span class="text_shadows">SevenCode</span>,new Programmer</H1>
+            </div>
             <p>
                 Welcome to the world of programming!
                 Learn programming languages, create impressive
                 projects and expand your skills with us.
             </p>
-            <button class="btnG">Get Started</button>
         </div>
         <div class="image">
             <img src="images/code23.jpg">
